all things done

--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -10,11 +10,21 @@
 			</tr>
 			<tr>
 				<td>GET</td>
-				<td>{{ get_request_num }}</td>
+				<td>{{ get_requests }}</td>
 			</tr>
 			<tr>
 				<td>POST</td>
-				<td>{{ post_request_num }}</td>
+				<td>{{ post_requests }}</td>
 			</tr>
+			<tr>
+				<td>PUT</td>
+				<td>{{ put_requests }}</td>
+			</tr>
+			<tr>
+				<td>DELETE</td>
+				<td>{{ delete_requests }}</td>
+			</tr>
+		</table>
+		<a href="/">Back</a>
 	</body>
 </html>
